fix: fix profile image styling on small screens

--- a/_includes/site.css
+++ b/_includes/site.css
@@ -330,7 +330,8 @@ article {
         grid-row: span 3 / span 3;
     }
     div.profile > img.profile-img {
-        width: 30%;
+        width: 200px;
+        height: 200px;
     }
     img  {
         width: 100%;
